This is my first commit

--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,6 @@
   </head>
   <body>
     This is is ugh confusing. I hope it worked!
+    This is a line added in my laptop.
     </body>
 </html>
