--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     
   </head>
   <body>
-    This is is ugh confusing. I hope it worked!
-    This is a line added in my laptop.
+    `This is is ugh confusing. I hope it worked!
+    This is a line added in my laptop.`
     </body>
 </html>
